# DS_project

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_jupyter.sh
seb_project/models/: model_lr.joblib  model_lr.pkl
seb_project/notebooks/: SEB Case.ipynb
seb_project/results/: presentation.pptx
seb_project/scripts/: script.py
tests/: test_seb_project.py
